--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,6 +4,62 @@
     font-family: Courier;
 }
 
-.section {
-    
+a {
+    margin: auto;
+    color: #000000;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+a:active {
+    text-decoration: underline;
+}
+
+a span {
+    color: #ffffff;
+}
+
+.link {
+    text-align: center;
+    background-color: beige;
+    border: 2px solid black;
+    padding: 10px;
+    margin: 5px;
+}
+
+[class*='col-'] {
+  float: left;
+}
+
+.col-1-2 {
+  width: 40%;
+}
+
+.grid:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+*, *:after, *:before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+[class*='col-'] {
+  padding-right: 20px;
+}
+[class*='col-']:last-of-type {
+  padding-right: 0;
 }
