--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,6 +4,11 @@
     font-family: Courier;
 }
 
+h2 {
+    padding: 0px;
+    margin: 0px;
+}
+
 a {
     margin: auto;
     color: #000000;
@@ -18,24 +23,53 @@ a:visited {
 }
 
 a:hover {
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 a:active {
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 a span {
     color: #ffffff;
 }
 
+span:hover {
+    border: 2px solid black;
+}
+
+#intro {
+    max-width: 50%;
+}
+
 .link {
+    font-size: 20px;
+}
+
+.link-block {
+  position: absolute; 
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+
+  /* edit: added z-index */
+  z-index: 1;
+
+  /* edit: fixes overlap error in IE7/8, 
+     make sure you have an empty gif */
+  background-image: url('empty.gif');
+}
+
+.link-div {
     text-align: center;
     background-color: beige;
     border: 2px solid black;
     padding: 10px;
     margin: 5px;
+    position: relative;
 }
+
 
 [class*='col-'] {
   float: left;
@@ -51,11 +85,20 @@ a span {
   clear: both;
 }
 
-*, *:after, *:before {
+.grid-pad {
+  padding: 20px 0 20px 20px;
+}
+
+/* necessary to align last col- element */
+.grid-pad > [class*='col-']:last-of-type {
+  padding-right: 20px;
+}
+
+/**, *:after, *:before {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-}
+}*/
 
 [class*='col-'] {
   padding-right: 20px;
