--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,7 +35,7 @@ a span {
 }
 
 span:hover {
-    border: 2px solid black;
+    border: 1px solid black;
 }
 
 #intro {
@@ -70,7 +70,6 @@ span:hover {
     position: relative;
 }
 
-
 [class*='col-'] {
   float: left;
 }
@@ -94,11 +93,11 @@ span:hover {
   padding-right: 20px;
 }
 
-/**, *:after, *:before {
+*, *:after, *:before {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-}*/
+}
 
 [class*='col-'] {
   padding-right: 20px;
