--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,16 +4,9 @@
     font-family: Courier;
 }
 
-body {
-    background-color: #fafaf0;
-    margin: 40px auto;
-}
-
-h1, h2, h3 {
-    text-align: center;
-    width: 100%;
+h2 {
     padding: 0px;
-    line-height: 1;
+    margin: 0px;
 }
 
 a {
@@ -46,69 +39,75 @@ span:hover {
 }
 
 #intro {
-    margin: 0px auto;
     max-width: 65%;
 }
 
 .link {
-    font-size: 24px;
+    font-size: 20px;
 }
 
 /* Make big clickable link buttons */
-.link-block-span {
-    position: absolute; 
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    
-    /* Put in front of other elements */
-    z-index: 1;
+.link-block {
+  position: absolute; 
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+
+  /* edit: added z-index */
+  z-index: 1;
+
+  /* edit: fixes overlap error in IE7/8, 
+     make sure you have an empty gif */
+  background-image: url('empty.gif');
 }
 
 .link-div {
-    display: inline-block;
     text-align: center;
-    background-color: #f0f0f0;
+    background-color: beige;
     border: 2px solid black;
     padding: 10px;
     margin: 5px;
-    height: 120px;
     position: relative;
 }
 
 /* Make columns for links */
-.col-r {
-    margin-right: 8%;
-    width: 40%;
-    float: right;
+.col-1-2 {
+  width: 40%;
 }
 
-.col-l {
-    margin-left: 8%;
-    width: 40%;
-    float: left;
+[class*='col-'] {
+  float: left;
 }
 
-.grid {
-    margin: 0px auto;
-    text-align: center;
-    width: 80%;
+/* Add padding to all columns */
+[class*='col-'] {
+  padding-right: 20px;
+}
+/* Except the very last column */
+[class*='col-']:last-of-type {
+  padding-right: 0;
 }
 
 .grid:after {
-    content: "";
-    display: table;
-    clear: both;
+  content: "";
+  display: table;
+  clear: both;
 }
 
-.grid-row {
-    height: 120px;
+.grid-pad {
+  padding: 20px 0 20px 20px;
+}
+
+/* necessary to align last col- element */
+.grid-pad > [class*='col-']:last-of-type {
+  padding-right: 20px;
 }
 
 /* "Specify that <div> elements should have padding and border included in the element's total width and height" from W3Schools */
 *, *:after, *:before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
+
