--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,7 @@ p {
     margin: 5px;
 }
 
-img {
+#profile-pic {
     height: 144px;
     width: 144px;
     margin: 12px;
@@ -29,4 +29,27 @@ div > a {
 
 .fa {
     margin: 5px;
+}
+
+.row {
+    display: table;
+}
+
+.project {
+    height: 256px;
+}
+
+.project > img {
+    max-height: 100%;
+    max-width: 100%;
+    height: 128px;
+    width: auto;
+}
+
+.description {
+    height: 128px;
+}
+
+#mcdermott-log {
+    padding: 10px;
 }
